# LearnFFmpeg

./: CMakeLists.txt  ds.264  ds.hevc
code/: avio_reading.c  decode_audio.c  decode_video.c  encode_audio.c  encode_video.c  filtering_video.c  muxing.c  reading_audio_file.c  yuv_to_h264.cpp
lib/: libavdevice.so.58  libavfilter.so.7  libavformat.so.58  libavutil.so.56  libpostproc.so.55  libswresample.so.3  libswscale.so.5  libx264.so.157
